# kirin

./: .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  devdoc.yml  doc.yml  pub_doc.yml  publish.yml  release.yml
docs/: 101.md  analysis.md  contrib.md  def.md  index.md  install.md  interp.md  mission.md
docs/api/: stmt.md
docs/blog/: .authors.yml
docs/blog/posts/: 2024-nov-11-mission.md
docs/cookbook/beer_dialect/: analysis.md  cf_rewrite.md  codegen.md
docs/dialects/: cf.md  func.md  ilist.md  scf.md
docs/stylesheets/: extra.css
example/beer/: attrs.py  dialect.py  emit.py  group.py  interp.py  lattice.py  recept.py  rewrite.py  script.py  stmts.py
example/food/: emit.py  interp.py  recept.py  script.py  stmts.py
example/pauli/: script.py
scripts/: release.py
src/kirin/: __init__.py  exception.py  exceptions.py  graph.py  idtable.py  lattice.py  prelude.py  registry.py  registry.pyi  source.py  worklist.py
src/kirin/analysis/: __init__.py  callgraph.py  cfg.py  forward.py  typeinfer.py
src/kirin/codegen/: __init__.py  (+6 more)
test/analysis/: test_callgraph.py
test/codegen/: test_basic.py
test/dialects/: test_debug.py  test_dummy.py  test_func.py  test_ilist.py  test_ilist2list.py  test_pytypes.py
test/emit/: test_julia.py
test/interp/: test_select.py
test/ir/: test_duplicated.py  test_group.py  test_isequal.py  test_stmt.py
test/lowering/: test_337.py  test_call.py  test_closure.py  test_for.py  test_func.py  test_ifelse.py  test_list.py
test/passes/: test_inline_pass.py
test/print/: test_basic.py
test/rules/: test_alias.py  test_apply_type.py  test_cfg_compactify.py  test_compactify.py  test_cse.py  test_dce.py  test_fcfmap_inline.py  test_fold.py  test_fold_br.py  test_getitem.py  test_inline.py  test_simplify.py
test/stmt/: decl.py  test_from_python_call.py  test_init.py  test_scan_fields.py
test/test/: test_assert_statements_same.py  test_assert_structurally_same.py
test/verify/: test_typecheck.py
(+289 files in other folders)
